@@ -1,0 +1,9 @@
+= content_for :meta_tags do
+  - if current_user
+    = auto_discovery_link_tag(:atom, group_url(@group, format: :atom, private_token: current_user.private_token), title: "#{@group.name} activity")
+
+- page_title    "Activity"
+- header_title  "Activity", activity_dashboard_path
+
+%section.activities
+  = render 'activities'
